# CodingAgentCli

./: .env.example  .env.generic  .env.granite  .env.hybrid  .env.llama  .env.openrouter  .env.optimized  .gitignore  .pre-commit-config.yaml  GRANITE_SETUP.md  README.md  codex_study.md  gemini_study.md  logging_demo_output.txt  models_performance.md  pyproject.toml  run_test_suite.py  sandbox.styles.css  switch_env.sh  test_31_cv_landing.py  test_code_generator.py  test_code_quality.py  test_cv_landing.py  test_file_editor.py  test_file_editor_direct.py  test_landing_page.py  test_logging_demo.py  test_ollama_direct.py  test_openrouter_code_gen.py  test_suite_openrouter.py  test_tetris_game.py  tool_vs_text_analysis.md
config/: agents.yaml
docs/: CLI_GUIDE.md  MODEL_CONFIGURATION.md  TOOL_CALLING_GUIDE.md  implementation_plan.md  implementation_plan_detailed.md  model_compatibility.md
e2etests/: code_extractor.py  results.md  results_summary.md  run_complete_suite.py  run_tests.py  run_tests_hybrid.py  test_scenarios.md
e2etests/sandbox/: app_config.py  calc.py  calculator.py  config.py  counter.py  cv_landing.html  data.py  hello_cli.py  landing.html  math.py  models.py  person.py  string_utils.py  test_calculator.py  todo.py  user_model.py  utils.py
sandbox/: cv_m3.html  test_calc.py
sandbox/tests/output/: cv_landing.html
tests/: conftest.py  test_example.py
tests/integration/: conftest.py  test_first_agent.py  test_providers.py
tests/output/: .gitignore  app.js  cv_landing.html  demo.html  index.html  landing.html  styles.css  tetris.html  topbar-toggleBtn.js
tests/output/cogito_14b/: app.js  cv_landing.html  index.html  landing.html  styles.css  test_summary.md  tetris.html  tetris.js
tests/output/cogito_14b/cv-assets/: cv-landing-scripts.js
tests/unit/: test_agent_factory.py  test_approval.py  test_cli.py  test_config.py  test_delegation.py  test_file_mentions.py  test_registry.py  test_search_tools.py  test_shell_web_memory.py  test_tools.py  test_utils.py
