[project]
name = "gemini-agent-py"
version = "0.1.0"
description = "Model-agnostic CLI agent with multi-provider support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    # Terminal UI
    "rich>=13.0.0",
    "click>=8.1.0",
    
    # Async HTTP and I/O
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    
    # Data validation
    "pydantic>=2.0.0",
    
    # Multi-Provider Support
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.8.0",
    "ollama>=0.1.0",
    "litellm>=1.0.0",
    
    # MCP Protocol
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    
    # Linting and formatting
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    
    # Pre-commit hooks
    "pre-commit>=3.0.0",
]

[project.scripts]
gemini-agent = "packages.cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--cov=packages",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.black]
line-length = 100
target-version = ['py310']
